# fhir

./: .dockerignore  CLAUDE.md  Cargo.toml  README.md  bacon.toml  docker-compose.yaml  flake.nix
api/: .env  Cargo.toml  Dockerfile
api/.sqlx/: query-2b9b69ea130c36c6f6b4bfdbdddf7cb4903524a5228dda0a3b6830538e56409d.json  query-72d7d2f9f4a4d9352a7012e4a70bfb4aee0283557297042cc405b681cdbcee60.json  query-b6dff91090e0c6d7d38f963c561ecd9b16a69b319cf3c811a6a2f961f8cc6239.json  query-dcaa867b147db331a7f818be5d3f549965988387e48c1def85cfad9b62dc833d.json
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/routes/: create.rs  get.rs  history.rs  list.rs  mod.rs
db/: Cargo.toml  Dockerfile  README.md  fhir.control
db/src/: gucs.rs  hooks.rs  lib.rs  macros.rs  models.rs  schema.rs  spi.rs
db/src/api/: common.rs  get.rs  history.rs  mod.rs  put.rs  search.rs
db/src/fhir/: mod.rs
db/src/index/: mod.rs  patient.rs
db/tests/pg_regress/sql/: setup.sql
dbeaver/: Script-1.sql
