[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
axum-tracing-opentelemetry = "0.32.2"
base64 = "0.22.1"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
dotenv = "0.15.0"
eyre = "0.6.12"
init-tracing-opentelemetry = { version = "0.34.0", features = ["metrics", "tracing_subscriber_ext"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "time", "uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing_log_error = "0.1.4"
utoipa = { version = "5.4.0", features = ["axum_extras", "time", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
